# anodized

./: CHANGELOG.md  Cargo.toml  REFERENCE.md
.github/workflows/: ci.yml
.zed/: settings.json
crates/anodized/: Cargo.toml  MANUAL.md  README.md  REFERENCE.md
crates/anodized-core/: Cargo.toml  README.md
crates/anodized-core/src/: annotate.rs  annotate_tests.rs  instrument.rs  lib.rs  qualifiers.rs  test_util.rs
crates/anodized-core/src/annotate/: mod.rs  syntax.rs  tests.rs
crates/anodized-core/src/instrument/: data.rs  data_tests.rs  fns.rs  fns_tests.rs  impls.rs  impls_tests.rs  loops.rs  loops_tests.rs  mod.rs  traits.rs  traits_tests.rs
crates/anodized-core/src/instrument/data/: mod.rs  tests.rs
crates/anodized-core/src/instrument/fns/: mod.rs  tests.rs
crates/anodized-core/src/instrument/hax/: mod.rs
crates/anodized-core/src/instrument/loops/: mod.rs  tests.rs
crates/anodized-core/src/instrument/traits/: mod.rs  tests.rs
crates/anodized-core/src/instrument/types/: mod.rs  tests.rs
crates/anodized-fmt/: Cargo.toml  README.md
crates/anodized-fmt/src/: collect_comments.rs  lib.rs  source_file.rs  test_util.rs
crates/anodized-fmt/src/formatter/: mod.rs  spec.rs
crates/anodized-fmt/tests/: integration.rs
crates/anodized-fmt/tests/fixtures/expected/: array_comments.rs  with_binds.rs
crates/anodized-fmt/tests/fixtures/input/: array_comments.rs  basic_traits.rs  skipped_formatting.rs  with_binds.rs
crates/anodized-fuzz/: Cargo.toml  README.md
crates/anodized-fuzz/src/: lib.rs
crates/anodized-logic/: Cargo.toml  README.md
crates/anodized-logic/src/: arithmetic.rs  lib.rs  operators.rs  quantifiers.rs  syntax.rs
crates/anodized-logic/src/arithmetic/: interop.rs
crates/anodized-logic/tests/: arithmetic.rs  operators.rs  quantifiers.rs  syntax.rs
crates/anodized-logic/tests/compile_fail/: quantifiers.rs  quantifiers.stderr
crates/anodized-macros/: Cargo.toml  README.md
crates/anodized-macros/src/: lib.rs
crates/anodized/src/: lib.rs  result.rs  runtime.rs
crates/anodized/tests/: arithmetic.rs  async_function.rs  basic_enum.rs  basic_function.rs  basic_traits.rs  basic_types.rs  build_fail.rs  captures_feature.rs  data_enum.rs  data_struct.rs  default_output_pattern.rs  execution_order.rs  explicit_binding_in_postcondition.rs  fuzzing.rs  hax.rs  loops.rs  method_call_invariant.rs  method_with_invariant.rs  multiple_conditions.rs  rename_return_value.rs  trait_fn_patterns.rs  trait_narrowing.rs
crates/anodized/tests/build_fail/trait_narrowing/: Cargo.toml  main.rs
crates/anodized/tests/compile_fail/: captures_scope_isolation.rs  closure_form_unsupported.rs  closure_form_unsupported.stderr  spec_on_impl_trait_const.stderr  spec_on_impl_trait_type.stderr  spec_on_negative_trait_impl.stderr  spec_on_trait_const.stderr  spec_on_trait_type.stderr  struct_field_type_err.rs  struct_field_type_err.stderr  struct_field_unknown.rs  struct_field_unknown.stderr  struct_invalid_spec.rs  struct_invalid_spec.stderr
crates/test-util/: Cargo.toml
crates/test-util/src/: fmt.rs
examples/bin-search/: Cargo.toml  README.md
examples/bin-search/.cargo/: config.toml
examples/bin-search/fuzz/: Cargo.toml
examples/bin-search/fuzz/fuzz_targets/: fuzz_target_1.rs
examples/bin-search/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fmt_whitespace.rs  fmt_ws_invariant.rs
typo-redirect/: Cargo.toml  README.md
