[workspace]
members = [
    "crates/anodized",
    "crates/anodized-core",
    "crates/anodized-fmt",
    "crates/anodized-logic",
    "crates/anodized-macros",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anodized-rs/anodized"
description = "A common specification layer for Rust"
categories = [
    "development-tools",
    "development-tools::procedural-macro-helpers",
]
keywords = [
    "correctness",
    "design-by-contract",
    "fuzzing",
    "testing",
    "verification",
]

[workspace.dependencies]
anodized-core = { version = "0.5.0", path = "crates/anodized-core" }
anodized-logic = { version = "0.5.0", path = "crates/anodized-logic" }
anodized-macros = { version = "0.5.0", path = "crates/anodized-macros" }
num-bigint = "0.4.6"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "visit", "visit-mut"] }
