[workspace]
members = [
    "crates/anodized",
    "crates/anodized-core",
    "crates/anodized-fmt",
    "crates/anodized-logic",
    "crates/anodized-macros",
    "crates/test-util",
    "examples/bin-search",
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anodized-rs/anodized"
description = "A common specification layer for Rust"
categories = [
    "development-tools",
    "development-tools::procedural-macro-helpers",
]
keywords = [
    "correctness",
    "design-by-contract",
    "fuzzing",
    "testing",
    "verification",
]

[workspace.dependencies]
anodized = { version = "0.5.1", path = "crates/anodized" }
anodized-core = { version = "0.5.1", path = "crates/anodized-core" }
anodized-fmt = { version = "0.5.1", path = "crates/anodized-fmt" }
anodized-fuzz = { version = "0.5.1", path = "crates/anodized-fuzz" }
anodized-logic = { version = "0.5.1", path = "crates/anodized-logic" }
anodized-macros = { version = "0.5.1", path = "crates/anodized-macros" }
test-util = { path = "crates/test-util" }
num-bigint = "0.4.6"
pretty_assertions = "1"
prettyplease = "0.2"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "visit", "visit-mut"] }
