[package]
name = "anodized-core"
description = "Core interoperability for the Anodized specification system"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]

[dependencies]
bitflags = "2.11.1"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease.workspace = true
