[package]
name = "anodized-logic"
version = "0.1.0"
description = "Helps embed non-trivial elements of logic into Rust code"

edition.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
num-bigint = "0.4.6"

[dev-dependencies]
trybuild = "1.0"
