[package]
name = "anodized-logic"
description = "Helps Anodized embed non-trivial elements of logic into Rust code"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
num-bigint.workspace = true

[dev-dependencies]
trybuild = "1.0"
