[package]
name = "anodized-macros"
description = "Proc macros used by the Anodized specification system"

version.workspace = true
edition.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(anodized_discard_specs)", "cfg(anodized_panic)", "cfg(anodized_print)", "cfg(anodized_fuzz)"] }

[dependencies]
anodized-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
