[package]
name = "example-bin-search-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
anodized = { path = "../../../crates/anodized" }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
bin-search = { package = "example-bin-search", path = ".." }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
