[package]
name = "bin-search-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
anodized = { path = "../../../crates/anodized" }
bin-search = { path = ".." }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
